--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Sydneymwong.github.io : website" />
+    <meta name="description" content="Stuartmrwong.github.io : website" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sydneymwong">View my sister's GitHub</a>
+         
 
           <h1 id="project_title">Stuart Wong</h1>
           <h2 id="project_tagline">The data lover's brother</h2>
@@ -75,7 +75,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p><a href="index.html">This page sucks I want to go back to reading about that smart young lady who studies at Berkeley.</a></p>
+       
       </footer>
     </div>
 
