--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Stuart Wong</h1>
+        <h1>Stuart Wong                                                           <h3>Stuartmrwong@gmail.com</h3></h1>
         <h2>The data lover's brother</h2>
 
         <section id="downloads">
