--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <h1>Stuart Wong</h1>
         <h2>The data lover's brother</h2>
-        <h3><a href="Stuartmrwong@gmail.com">Stuartmrwong@gmail.com</a></h3>
+        <h3><a href="mailto:Stuartmrwong@gmail.com">Stuartmrwong@gmail.com</a></h3>
 
         <section id="downloads">
           
