--- a/Personal.html
+++ b/Personal.html
@@ -1,3 +1,33 @@
+<!DOCTYPE html>
 <html>
-<p>hello world</p>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <title>Stuart Wong</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>Stuart Wong</h1>
+        <h2>The data lover's brother</h2>
+        <h3><a href="mailto:Stuartmrwong@gmail.com">Stuartmrwong@gmail.com</a></h3>
+
+        <section id="downloads">
+          
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
+
+<p>This is under construction</p>
 </html>
