--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1><a href="stuartmrwong.com">Stuart Wong</a></h1>
+        <h1><a href="http://stuartmrwong.com/">Stuart Wong</a></h1>
         <h2>The data lover's brother</h2>
         <h3><a href="mailto:Stuartmrwong@gmail.com">Stuartmrwong@gmail.com</a></h3>
 
