--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <h3>Education</h3>
 <p>Bachelor of Science in Applied Technology from Eastern Washington University.</p>
 <p>Associate in Arts Network Services & Computing Systems – Network Administration from Bellevue College
-    <br><LI>2 years of network lab experience</LI></p></br>
+    <LI>2 years of network lab experience</LI></p>
 <p>Associate in Arts General Studies from Bellevue College</p>
 <p>Associate in Arts and Sciences from Bellevue College</p>
 
