--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </header>
 
-    <div class="container" style="width:1000px">
+    <div class="container">
       <section id="main_content">
         <h3>
 
