--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="main_content">
         <h3>
 
-
+<div id="content">
 <!-- RESUME  -->
 <h3> Experience</h3>
 <p><b>2010 – Current</p>
@@ -67,7 +67,7 @@
 <p>Associate in Arts and Sciences from Bellevue College</p>
 
     </div>
- 
+ </div>
   </body>
   <footer><a href="Personal.html">Other Stuff</a></footer>
 </html>
