--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="main_content">
         <h3>
 
-<div id="content">
+<div id="content" style="text-align:center">
 <!-- RESUME  -->
 <h3> Experience</h3>
 <p><b>2010 – Current</p>
