--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       </div>
     </header>
 
-    <div id="container" style="width:1000px">
+    <div class="container">
       <section id="main_content">
         <h3>
 
-<div id="content" style="text-align:center">
+
 <!-- RESUME  -->
 <h3> Experience</h3>
 <p><b>2010 – Current</p>
@@ -67,7 +67,7 @@
 <p>Associate in Arts and Sciences from Bellevue College</p>
 
     </div>
- </div>
+ 
   </body>
   <footer><a href="Personal.html">Other Stuff</a></footer>
 </html>
