--- a/mumbled&d.html
+++ b/mumbled&d.html
@@ -25,7 +25,7 @@
     
   </body>
 
-<p>This is under construction TRIGGER WARNING THIS STORY MAY CONTAIN ELEMENTS THAT ARE DISGUSTING</p>
+<p><font color="brown"></font>This is under construction TRIGGER WARNING THIS STORY MAY CONTAIN ELEMENTS THAT ARE DISGUSTING</p>
 <p>Our story begins with 3 travelers.  The first is a 14 year old, 135 pound girl named Lavender.  The second is a 3foot tall, 40 pound halfling named Garret.  The third is a anorexic imsoniac 100 pound elf that is somewhat slow named Aust.</p>
 <p>The group enters a small town and heads to the tavern.  They sit down at a table and Aust enters a trance where he stares off into space and cannot be communicated with.  The bartender seems offput by the tranced elf and after some potentially rude remarks from Lavender the group gets kicked out of the tavern.</p>
 <p>The three friends decide to try and find a job to make some money because they are literally broke.  They enter a shop and Lavender asks if they sell any candy.  The fedora wearing shopkeeper tells the group about how the town's crops have been burned and because of that the town doesn't have much in the way of candy.  Aust uncermoniously pulls out his genitalia.  The shopkeeper tells Aust to stop and Aust pulls his pants back up.  The shopkeep tells the group that his 2/10 pig disgusting wife needs some spider silk from the mines to the west so that she can make some thread.  Aust makes a comment about ejaculation which gets him kicked out of the shop. As they leave Lavender winks at the shopkeep and licks her lips while looking at the wife.</p>
