--- a/mumbled&d.html
+++ b/mumbled&d.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1><a href="http://roll20.net/">Mumble D&D</a></h1>
-        
+        <h2>YOU ARE NOT AUTHORIZED TO BE HERE. CLOSE YOUR BROWSER IMMEDIATELY.</h2>
         <section id="downloads">
           
         </section>
