--- a/nfa.html
+++ b/nfa.html
@@ -5,7 +5,9 @@ july18 FXCM 200k fine
 </h3>
 
 <p>
-https://www.nfa.futures.org/news/newsRel.asp?ArticleID=4447
+<a href="https://www.nfa.futures.org/news/newsRel.asp?ArticleID=4447">https://www.nfa.futures.org/news/newsRel.asp?ArticleID=4447
+
+</a>  
 </p>
 <p>
 -FORTRESS is the NFA's transaction reporting system and FXCM didnt send them their trades, also did not register with the CFTC, when doing business with Revelation Forex Fund.
@@ -15,7 +17,7 @@ https://www.nfa.futures.org/news/newsRel.asp?ArticleID=4447
 FXCM various fines 2005, 2006, 2007, 2011, 2014
 </h3>
 <p>
-https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg
+<a href="https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg">https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg
 </p>
 
 
@@ -23,14 +25,17 @@ https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg
 FXCM arbitration decisions
 </h3
 <p>
-https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=arb
+<a href="https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=arb">https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=arb</a>
 </p>
 
 <h3>
 Tradestation has only 1 regulatory action and it is not a fine, it is a letter reprimand:
 </h3>
 <p>
-https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0307871&type=reg
+<a href="https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0307871&type=reg
+">https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0307871&type=reg
+</a>
+  
 </p>
 
 <h3>
