--- a/nfa.html
+++ b/nfa.html
@@ -17,7 +17,7 @@ july18 FXCM 200k fine
 FXCM various fines 2005, 2006, 2007, 2011, 2014
 </h3>
 <p>
-<a href="https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg">https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg
+<a href="https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg">https://www.nfa.futures.org/basicnet/CaseInfo.aspx?entityid=0308179&type=reg</a>
 </p>
 
 
