--- a/masterkey.html
+++ b/masterkey.html
@@ -3,5 +3,12 @@
 <p>
 <a href="http://stuartmrwong.com">MAIN</a>
 </p>
+
+<p><a =href"http://stuartmrwong.com/Personal.html">PERSONAL</a></p>
+
+
+<p><a =href"http://stuartmrwong.com/mumbleD&D.html">MUMBLED&D</a></p>
+
+
 </body>
 </html>
