--- a/masterkey.html
+++ b/masterkey.html
@@ -4,10 +4,10 @@
 <a href="http://stuartmrwong.com">MAIN</a>
 </p>
 
-<p><a =href"http://stuartmrwong.com/Personal.html">PERSONAL</a></p>
+<p><a href="http://stuartmrwong.com/Personal.html">PERSONAL</a></p>
 
 
-<p><a =href"http://stuartmrwong.com/mumbleD&D.html">MUMBLED&D</a></p>
+<p><a href="http://stuartmrwong.com/mumbleD&D.html">MUMBLED&D</a></p>
 
 
 </body>
