--- a/mumbled&d.html
+++ b/mumbled&d.html
@@ -24,7 +24,7 @@
     </header>
     
   </body>
-
+<p><a href="http://media.wizards.com/downloads/dnd/DnDBasicRules.pdf"http://media.wizards.com/downloads/dnd/DnDBasicRules.pdf></a></p>
 <p><font color="brown">This is under construction <h2>TRIGGER WARNING THIS STORY MAY CONTAIN ELEMENTS THAT ARE DISGUSTING</h2></p>
 <p>Our story begins with 3 travelers.  The first is a 14 year old, 135 pound girl named Lavender.  The second is a 3foot tall, 40 pound halfling named Garret.  The third is a anorexic imsoniac 100 pound elf that is somewhat slow named Aust.</p>
 <p>The group enters a small town and heads to the tavern.  They sit down at a table and Aust enters a trance where he stares off into space and cannot be communicated with.  The bartender seems offput by the tranced elf and after some potentially rude remarks from Lavender the group gets kicked out of the tavern.</p>
