--- a/mumbled&d.html
+++ b/mumbled&d.html
@@ -26,6 +26,7 @@
   </body>
 <p><a href="http://media.wizards.com/downloads/dnd/DnDBasicRules.pdf">http://media.wizards.com/downloads/dnd/DnDBasicRules.pdf></a></p>
 <p><font color="brown">This is under construction <h2>TRIGGER WARNING THIS STORY MAY CONTAIN ELEMENTS THAT ARE DISGUSTING</h2></p>
+<h1>Session 1. July 25, 2014</h1>
 <p>Our story begins with 3 travelers.  The first is a 14 year old, 135 pound girl named Lavender.  The second is a 3foot tall, 40 pound halfling named Garret.  The third is a anorexic imsoniac 100 pound elf that is somewhat slow named Aust.</p>
 <p>The group enters a small town and heads to the tavern.  They sit down at a table and Aust enters a trance where he stares off into space and cannot be communicated with.  The bartender seems offput by the tranced elf and after some potentially rude remarks from Lavender the group gets kicked out of the tavern.</p>
 <p>The three friends decide to try and find a job to make some money because they are literally broke.  They enter a shop and Lavender asks if they sell any candy.  The fedora wearing shopkeeper tells the group about how the town's crops have been burned and because of that the town doesn't have much in the way of candy.  Aust uncermoniously pulls out his genitalia.  The shopkeeper tells Aust to stop and Aust pulls his pants back up.  The shopkeep tells the group that his 2/10 pig disgusting wife needs some spider silk from the mines to the west so that she can make some thread.  Aust makes a comment about ejaculation which gets him kicked out of the shop. As they leave Lavender winks at the shopkeep and licks her lips while looking at the wife.</p>
@@ -44,6 +45,15 @@
 <p>A man comes in the next morning because apparently he is a regular at this establishment.  Lavender bullshits him about how the innkeeper is currently not feeling well.  Lavender realizes the man is rich because he is a blacksmith and takes out her dagger to kill him with a grin.  The man asks Garret to go to the mines in the west and bring back more ore.  Lavender sighs as Garret accepts the job. </p>
 
 <p>The group sets off to the mines again and fights 3 zombies.  Lavender is injured again but the group wins the fight.  After the fight they find an injured man named Prog.  Prog was a miner in this mine and after repeated questioning will still not tell the group where the ore is.</p>
+
+<h1>Session 2. July 26, 2014</h1>
+<p>Prog shows the group where the ore is in the mines.  The group takes 3 wheelbarrow fulls of ore back to the town.  The blacksmith tells the group about a river to the east.  Prog gets kicked out of the blacksmith shop.  Lavender, Prog and Aust chain smoke off Lavender's pipe on the way to the river.  Prog runs back to the blacksmith shop and trips and falls into the furnace filled with molten metal and severely injures himself.  The group bathes in the river.  Aust shits in the river accidentally then washes his clothes.  They go east from the river. The group sees a sign and realies the village they were in is called Cunberfield and the country they are in is called Caldaria. They see wilderness to the north and to the south and think that it would be a great idea to bury the tavern keeper in the wilderness.  On their way back to gather up the body Prog decides to run into the blacksmith shop without permission.  The blacksmith asks him to leave and instead he runs into the blacksmith's bedroom and opens a chest he sees.  The chest is filled with gold.  The blacksmith screams for the guards and Prog throws gold pieces at him.  The rest of the group hears the commotion and starts heading over to the blacksmith shop.</p>
+
+<p>The smith grabs his smithing hammer and smacks Prog. Prog crumples to the floor unconscious.  The guards and the group arrive.  The group profusely apologizes for Prog's behaviour and take him back to the inn.  The group finds the body upstairs and it is starting to smell.  Lavender decides to begin cutting him up so he will fit in the three chests that are in the bedroom.  Lavender starts to have trouble when she hits the bone and Aust pulls out his mace and smashes the bones for her.  They divide the innkeeper into three equal parts and fill the chests with him.  They put the chests into the wheelbarrows.  Garret suggests dumping the chests in the river.  Lavender agrees because she thinks it would be funny if someone downriver saw the chests and thought "treasure!" but then found dead body parts.</p>
+
+
+
+
 
 
   </font>
