--- a/masterkey.html
+++ b/masterkey.html
@@ -9,6 +9,7 @@
 
 <p><a href="http://stuartmrwong.com/mumbled&d.html">MUMBLED&D</a></p>
 
+<p><a href="http://stuartmrwong.com/nfa.html">NFA</a></p>
 
 </body>
 </html>
