--- a/haribo.html
+++ b/haribo.html
@@ -25,7 +25,7 @@
     
   </body>
 
-
+<table>
 <p>Hello,<br><br>
 
 My name is Stuart and I thought of a great idea! Haribo sells "Gold Bears" and the mascot of the University of California, Berkeley, affectionately known as "Cal" or "Berkeley" is Oski the Bear.  The nickname is the "Golden Bears" so I figured that went great with your product!  I was thinking that you could make special "Berkeley Blue" and "California Gold" bears and sell them at Berkeley sporting events to promote your product.  You can read more about them here: "http://en.wikipedia.org/wiki/University_of_California,_Berkeley".  
@@ -35,6 +35,8 @@ Thank you for your time,
 -Stuart
 <br><br>
 p.s can you send me some free haribo products, that would be awesome!</p>
+
+</table
 
 </font>
 </html>
