--- a/masterkey.html
+++ b/masterkey.html
@@ -11,5 +11,8 @@
 
 <p><a href="http://stuartmrwong.com/nfa.html">NFA</a></p>
 
+<p><a href="http://stuartmrwong.com/haribo.html">HARIBO</a></p>
+
+
 </body>
 </html>
