--- a/trading.html
+++ b/trading.html
@@ -1,5 +1,14 @@
 <html>
 
+<form>
+  First Name: <input type="text" name="firstname"><br>
+  Last Name: <input type="text" name="lastname"><br>
+  Social Security Number: <input type="text" name="socialsecuritynumber"> <br>
+  
+  
+</form>
+
+
 <p class="question">1. Are you a bad trader?</p>
 <ul class="answers">
 <input type="radio" name="q1" value="a" id="q1a"><label for="q1a">Yes</label><br/>
