--- a/trading.html
+++ b/trading.html
@@ -19,9 +19,23 @@
 <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Stuart is better than me</label><br/>
 </ul>
 
+
+
 <div id="results">
 I'm done with the test.
 </div>
+
+
+<script>
+$(document).ready(function() 
+{    $("#results").click(function() {                
+
+if (!$("input[@name=q1]:checked").val()
+) {            
+alert("You're not done yet!");        
+} }         }
+</script>
+
 
 <div id="category1">
 <p><strong>Question 1:</strong> The correct answer is the <strong>Answer 4</strong>.</p>
