--- a/trading.html
+++ b/trading.html
@@ -41,4 +41,8 @@ alert("You're not done yet!");
 <p><strong>Question 1:</strong> The correct answer is the <strong>Answer 4</strong>.</p>
 </div>
 
+
+<script type="text/javascript" src="jquery.js"></script>
+
+
 </html>
