--- a/trading.html
+++ b/trading.html
@@ -42,7 +42,7 @@ alert("You're not done yet!");
 </div>
 
 
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="javascripts/jquery.js"></script>
 
 
 </html>
