--- a/trading.html
+++ b/trading.html
@@ -37,12 +37,8 @@ alert("You're not done yet!");
 </script>
 
 
-<div id="category1">
-<p><strong>Question 1:</strong> The correct answer is the <strong>Answer 4</strong>.</p>
-</div>
-
 
 <script type="text/javascript" src="javascripts/jquery.js"></script>
-
+<script type="text/javascript" src="javascripts/quiz-1.js"></script>
 
 </html>
