--- a/trading.html
+++ b/trading.html
@@ -26,6 +26,10 @@
 I'm done with the test.
 </div>
 
+<div id="category1">
+<p><strong>Question 1:</strong> The correct answer is the <strong>Answer 1</strong>.</p>
+</div>
+
 
 <script>
 $(document).ready(function() 
