--- a/trading.html
+++ b/trading.html
@@ -1,3 +1,3 @@
 <html>
-<iframe src="https://docs.google.com/forms/d/1bW_vI3fc3ueXH5HQTcc2UI2Jo6ljbEdf-55Qiz5sdjQ/viewform?embedded=true">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/1bW_vI3fc3ueXH5HQTcc2UI2Jo6ljbEdf-55Qiz5sdjQ/viewform?embedded=true" width="9999999" height="9999999" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </html>
