--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+<body>Donate to my father's cancer treatment please</body>
 
   <head>
     <meta charset='utf-8'>
