--- a/masterkey.html
+++ b/masterkey.html
@@ -13,6 +13,8 @@
 
 <p><a href="http://stuartmrwong.com/haribo.html">HARIBO</a></p>
 
+<p><a href="http://stuartmrwong.com/Cosmetology.html">COSMETOLOGY</a></p>
+
 
 </body>
 </html>
