--- a/mumbled&d.html
+++ b/mumbled&d.html
@@ -24,8 +24,12 @@
     </header>
     
   </body>
+  
+  
 <p><a href="http://media.wizards.com/downloads/dnd/DnDBasicRules.pdf">http://media.wizards.com/downloads/dnd/DnDBasicRules.pdf></a></p>
 <p><font color="brown">This is under construction <h2>TRIGGER WARNING THIS STORY MAY CONTAIN ELEMENTS THAT ARE DISGUSTING</h2></p>
+<h1>Session 4. February 14, 2016</h1>
+<p>Our story begins with 3 travelers.  The first is a 14 year old, 102 pound girl named Rosemary.  The second is a 4 foot tall 12 year old boy named Rand Smith.  The third is a 6 foot 6 giant robot that weighs 300 pounds and is powered by magic named S.R.C.H.E #0451.  The three travelers arrive at the city of Ri Baile in the kingfom of Pobail Munitir.  It is a human capital city.  The party overhears that apparently the king has raised taxes and yet has not been providing any extra services to the people.  In fact, it seems that even less services are being provided and bandits and thieves are running wild.  Many farmers outside of town have been robbed and even traveling merchants.  The group decides to head into the forest but S.R.C.H.A wont move. Rosemary smacks him and giggles.  S.R.C.H.A screams and they head out to see if they can find these bandits and bring them to justice.  Almost immediately they sense that there are some people hiding themselves nearby.  Rosemary jumps and hides in a bush. They are accosted by three bandits demanding a toll to travel along the road.  After some failed intimidation tactics Rand shoots the toll taker in the chest with his crossbow.  S.R.C.H.A splits him in half vertically with his greatsword. One of the bandits gets a lucky hit on S.R.C.H.A.  Rosemary rushes to his defense and stabs the bandit with her rapier. Rand shoots him with his crossbow and all the bandits are dead.</p>
 <h1>Session 1. July 25, 2014</h1>
 <p>Our story begins with 3 travelers.  The first is a 14 year old, 135 pound girl named Lavender.  The second is a 3foot tall, 40 pound halfling named Garret.  The third is a anorexic imsoniac 100 pound elf that is somewhat slow named Aust.</p>
 <p>The group enters a small town and heads to the tavern.  They sit down at a table and Aust enters a trance where he stares off into space and cannot be communicated with.  The bartender seems offput by the tranced elf and after some potentially rude remarks from Lavender the group gets kicked out of the tavern.</p>
