--- a/Storage.html
+++ b/Storage.html
@@ -1,3 +1,35 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <title>Stuart Wong</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1><a href="http://stuartmrwong.com/">Stuart Wong</a></h1>
+        <h2>The data lover's brother</h2>
+        <h3>YOU ARE NOT AUTHORIZED TO BE HERE.  CLOSE YOUR BROWSER IMMEDIATELY.</a></h3>
+
+        <section id="downloads">
+          
+        </section>
+      </div>
+    </header>
+    
+  </body>
+
+<p>This is under construction</p>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Fun stuff</h3>
+
 <p><b>2010 – Current</p>
 <p>Self Employed Currency Speculator and Money Manager</b></p>
     <UL>
@@ -31,3 +63,18 @@
     <LI>2 years of network lab experience</LI></p>
 <p>Associate in Arts General Studies from Bellevue College</p>
 <p>Associate in Arts and Sciences from Bellevue College</p>
+
+
+
+  
+  
+</html>
+
+
+
+
+
+
+
+
+
