--- a/index.html
+++ b/index.html
@@ -41,32 +41,18 @@
 
 <!-- RESUME  -->
 <h3> Experience</h3>
-<p><b>2010 – Current</p>
-<p>Self Employed Currency Speculator and Money Manager</b></p>
+<p><b>2016</p>
+<p>Hair Stylist</b></p>
     <UL>
-    <LI>Analyzed Global markets and trends</LI>
-    <LI>Kept up to date with worldwide correlations between import/export commodities and their respective currencies</LI>
-    <LI>Trades were done with technical levels and fundamental analysis</LI>
+    <LI>April 25: Denim Acne Photoshoot</LI>
+    <LI>April 11: Bridal Photoshoot</LI>
+    <LI>April 10: San Rafael Wedding Show</LI>
+    <LI>March 8: Willowy Photoshoot</LI>
+    <LI>February 12-13: Hot Couture 2016</LI>
+  
     </UL>
 
-<p><b>2009 – 2010 Renton, WA</p>
-<p>Accessory Sales Associate at Fry’s Electronics</b></p>
-    <UL>
-    <LI>Helped customers with purchasing decisions</LI>
-    <LI>Was entrusted with closing after hours</LI>
-    <LI>Stocked shelves and helped resolved customer’s problems</LI>
-    </UL>
 
-<p><b>2006-2007 AmericanBridal.com San Francisco, CA</p>
-<p>Assistant to Head of Information Technology & Chief Financial Officer</b></p>
-    <UL>
-    <LI>Helped troubleshoot computers</LI>
-    <LI>Helped to create a network environment that implemented interactive remote desktop</LI>
-    <LI>Input Invoices</LI>
-    <LI>Corrected issues with payments</LI>
-    <LI>Answered the telephone and walked customers through the ordering process</LI>
-    <LI>Corrected any erroneous orders</LI>
-    </UL>
 
 <h3>Education</h3>
 <p>Bachelor of Science in Applied Technology from Eastern Washington University.</p>
