--- a/SIP/day1-97.html
+++ b/SIP/day1-97.html
@@ -17,6 +17,7 @@
       <div class="container">
         <h1><a href="http://stuartmrwong.com/">Stuart Wong</a></h1>
         <h2>The data lover's brother</h2>
+        <h3>Days 1 - 14 of the Shelter In Place. March of the shelter in place.</h3>
         
 
         <section id="downloads">
