--- a/SIP/june.html
+++ b/SIP/june.html
@@ -17,6 +17,13 @@
       <div class="container">
         <h1><a href="http://stuartmrwong.com/">Stuart Wong</a></h1>
         <h2>The data lover's brother</h2>
+        <h3>June 22nd, 2020. Day 97.</h3>
+        <p>Ok well the notes function has like completely broken. Maybe its because I got close to 100 (I think I had 96 notes and 4 drafts). Regardless, I have disliked facebook's UI for years now. I had written a lot for yesterday's note. I'm sure it's still there somewhere but I don't have access to it. So I guess this is day 97's note. This is frustrating to the point that I think I will begin making the notes in a google doc and I will put the link in here.
+
+EDIT 1: I remember I posted about a job update so I will try to retype it. The mayor said she was gonna try to make it so I could work on July 13. San Francisco is one of 4 counties in California that have NOT gotten a regional variance for the SIP. This basically means we can't move to phase 3 or even really phase 2.5. So the Mayor yesterday said she was gonna try some other stuff so that I could work by June 29. No guarantee though. The other 3 counties are Imperial, Alameda, and Santa Clara.
+
+          <a href="https://www.sfgate.com/bayarea/article/San-Francisco-reopening-salons-zoos-breed-15357808.php">SFGate</a></p>
+        
         <h3>June 23rd, 2020. Day 98.</h3>
         <p>Coffee, chess. Today is the day after garbage day so all my cans were empty, this allowed me to sweep the driveway and put all the leaves in there. Then I also cut up a bunch of cardboard boxes from packaging and Amazon and put those in the recycle bin. I made sure to leave some room for whatever recycle we generate this week. I watered the plants. My best friend video called me with his family and we talked. They were using those like 10 pronged head massager things the entire call. I am going to begin putting my notes here instead of on Facebook because I can't seem to be able to access my facebook notes anymore.</p>
 
