--- a/SIP/june.html
+++ b/SIP/june.html
@@ -39,7 +39,7 @@ EDIT 1: I remember I posted about a job update so I will try to retype it. The m
         <p>I got to spend time with my girlfriend! I got us each a order of her favorite bulgogi from this mom and pop korean restaurant down the street. Then we watched a show together, it was very enjoyable :)</p>
         
         <h3>June 26th, 2020. Day 101.</h3>
-        <p> I have 10 bags of soil in the backyard that I brought in from the car yesterday. My mom went to Home Depot and picked it up after ordering online. Today I intend to mix it all and put it in these brick planters we have. I also intend to work on that coursera course. Then I have dnd tonight with my friday group.</p>
+        <p> I have 10 bags of soil in the backyard that I brought in from the car yesterday. My mom went to Home Depot and picked it up after ordering online. Today I intend to mix it all and put it in these brick planters we have. I also intend to work on that coursera course. Then I have dnd tonight with my friday group. I ate some leftover bulgogi from last night, it was yummy.</p>
         <section id="downloads">
           
         </section>
