--- a/SIP/june.html
+++ b/SIP/june.html
@@ -40,6 +40,8 @@ EDIT 1: I remember I posted about a job update so I will try to retype it. The m
         
         <h3>June 26th, 2020. Day 101.</h3>
         <p> I have 10 bags of soil in the backyard that I brought in from the car yesterday. My mom went to Home Depot and picked it up after ordering online. Today I intend to mix it all and put it in these brick planters we have. I also intend to work on that coursera course. Then I have dnd tonight with my friday group. I ate some leftover bulgogi from last night, it was yummy.</p>
+        <p>I unloaded all the soil and we planted wildflower seeds and wet the soil and covered it so it could germinate with no wind to ruin everything. Then I played dnd with my girlfriend and friday group. We explored a cave and fought a minotaur. Then we found this weird block with a puzzle on it. 
+        </p>
         <section id="downloads">
           
         </section>
