--- a/SIP/june.html
+++ b/SIP/june.html
@@ -42,6 +42,9 @@ EDIT 1: I remember I posted about a job update so I will try to retype it. The m
         <p> I have 10 bags of soil in the backyard that I brought in from the car yesterday. My mom went to Home Depot and picked it up after ordering online. Today I intend to mix it all and put it in these brick planters we have. I also intend to work on that coursera course. Then I have dnd tonight with my friday group. I ate some leftover bulgogi from last night, it was yummy.</p>
         <p>I unloaded all the soil and we planted wildflower seeds and wet the soil and covered it so it could germinate with no wind to ruin everything. Then I played dnd with my girlfriend and friday group. We explored a cave and fought a minotaur. Then we found this weird block with a puzzle on it. We solved it and opened a rift to the elemental plane of air.
         </p>
+        <h3>June 27th, 2020. Day 102.</h3>
+        <p>Today is Saturday. My mom took darwin to the vet and it turns out he has hip displacia which explains why he favors a certain way of sitting and walks much slower now. We also need to keep him warm because his body temperature is a little low. I have a space heater that I can point at him. I played chess and watched youtube videos. Then I played dnd with some friends using Foundry. Darwin also got to meet my sister's dog today at a dog park and they became friends!
+        </p>
         <section id="downloads">
           
         </section>
