--- a/SIP/june.html
+++ b/SIP/june.html
@@ -45,6 +45,9 @@ EDIT 1: I remember I posted about a job update so I will try to retype it. The m
         <h3>June 27th, 2020. Day 102.</h3>
         <p>Today is Saturday. My mom took darwin to the vet and it turns out he has hip displacia which explains why he favors a certain way of sitting and walks much slower now. We also need to keep him warm because his body temperature is a little low. I have a space heater that I can point at him. I played chess and watched youtube videos. Then I played dnd with some friends using Foundry. Darwin also got to meet my sister's dog today at a dog park and they became friends! In the dnd game we all almost died and one of us actually did, the final battle was crazy and had 3 parts.
         </p>
+        <h3>June 28th, 2020. Day 103.</h3>
+        <p>Church! My church has become a hub for food and supplies like diapers, apparently it doesn't really have room for people to actually do stuff anymore. We still aren't going to service and instead watching uploaded videos that they make during each week. Yesterday I did laundry and I did some more today. I played some fire emblem on a switch I borrowed from a friend. I played some chess and drank espresso. I also got two cheeseburgers from my neighbors. I did a bunch of other chores today like taking out the garbage and recycle, the dishes, and breaking down a bunch more amazon boxes. Oh also the freaking hot water went out while I was in the shower yesterday! I hate that!
+        </p>
         <section id="downloads">
           
         </section>
