--- a/SIP/june.html
+++ b/SIP/june.html
@@ -48,6 +48,9 @@ EDIT 1: I remember I posted about a job update so I will try to retype it. The m
         <h3>June 28th, 2020. Day 103.</h3>
         <p>Church! My church has become a hub for food and supplies like diapers, apparently it doesn't really have room for people to actually do stuff anymore. We still aren't going to service and instead watching uploaded videos that they make during each week. Yesterday I did laundry and I did some more today. I played some fire emblem on a switch I borrowed from a friend. I played some chess and drank espresso. I also got two cheeseburgers from my neighbors. I did a bunch of other chores today like taking out the garbage and recycle, the dishes, and breaking down a bunch more amazon boxes. Oh also the freaking hot water went out while I was in the shower yesterday! I hate that!
         </p>
+        <h3>June 29th, 2020. Day 104.</h3>
+        <p>Coffee.
+        </p>
         <section id="downloads">
           
         </section>
