--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/march.html">My March Shelter in Place journal</a></h4>
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/april.html">My April Shelter in Place journal</a></h4>
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/june.html">My June Shelter in Place journal</a></h4>
+        <h4 align="right"><a href="http://stuartmrwong.com/SIP/july.html">My July Shelter in Place journal</a></h4>
         <section id="downloads">
           
         </section>
