--- a/SIP/july.html
+++ b/SIP/july.html
@@ -30,7 +30,16 @@
         </p>
 <h3>July 5th, 2020. Day 110.</h3>   
         <p>This morning I went to grab oat milk for my coffee and I grabbed orange juice! I poured some into my mug, luckily there wasn't any coffee in it yet. I colored my mom's hair in the bathroom. I played chess and some other games, and I watched youtube videos. I made a instant udon noodle bowl and ate hawaiian chips. My friend said he is going to deliver something to me and leave it on my doorstep and that it's a surprise, I wonder what it is.
-        </p>     
+        </p>   
+<h3>July 6th, 2020. Day 111.</h3> 
+        <p>My girlfriend's neighbor had a emergency so I went over there. Everything was fine later. I started playing this game on my phone called Mindustry, it's like factorio. The game is ok but all it really does is just make me want to play factorio lol. I also watched like 4 episodes of 'The Babysitters Club' with my girlfriend. It's a show for like 13 year old girls but it has solid writing because it's based on a book series from the late 80s. Netflix funded it I think and it has pretty good production value which is basically all I care about. The mom is played by the lady from Clueless! So that's cool. Clueless and Mean Girls are classics.
+        </p>
+<h3>July 7th, 2020. Day 112.</h3>    
+        <p>Today I check on a order for my grandma. I think I forgot to mention that I ordered her a blender. It will arrive tomorrow. I called her the other day and she was like 'I want a blender!' So I was like ok sure and I ordered one that looked simple (5 buttons) from amazon. It's that ninja one. I ate some instant noodles and played some chess. For the past several days (since the death of Darwin) my focus has been very bad. I function completely fine, driving is fine etc. However my short term memory seems worse by about 1 standard deviation, enough to be statistically significant. I also seem incapable of extrapolating pertinent information, for example, I made 2 plans for the same evening, a dinner and also a video game session. I should have known that something was happening that night but didn't. On a side note, we are moving our Tuesday dnd game to Saturdays now to better accomodate one the player's work schedules.
+        </p>
+<h3>July 8th, 2020. Day 113.</h3> 
+        <p>My coginitive function still seems impaired. I made some chess blunders and could tell my focus was off. Like I would calculate a trade, think it was sound, do the trade, and be down a pawn. Later I got the blender delivered, I took it out of the box and tested it, then drove it over to my grandma and told her how to use it (with my voice while being 6 feet away, outdoors, with masks). Then later I played Gloomhaven with my friends!
+        </p>
      
            <section id="downloads">
           
