--- a/SIP/july.html
+++ b/SIP/july.html
@@ -45,6 +45,9 @@
         </p>
         <p>It was my intention to code some stuff in C today but after running errands and then shoveling in the yard I am tired. Maybe that's just a bad excuse. And tomorrow I have errands in the morning, then a salon meeting, then my friday dungeons and dragons group so idk if I will get any done tomorrow either. And then Saturday I have plans and Sunday too. You wouldn't believe how busy I am while sheltering in place and being jobless. It's crazy how quickly you can fill up your days with stuff.
         </p>
+<h3>July 10th, 2020. Day 115.</h3>
+        <p>I ran an errand in the morning. The salon meeting was cancelled, we have a special cleaning happening and apparently it won't be finished yet so we can't go in. I have dnd tonight with my friday group. I have been playing Fire Emblem: Three Houses (fe3h) on the switch I borrowed from my friend. It is a fun game and reminds me of Lanchester's Linear and Square Laws. You have to use both because I have troops that are melee (linear) and troops that are ranged (square). The one problem is that Lanchester's Laws are mainly used for equally skilled troops on both sides, but in fe3h you are the hero and you fight trash so often times you completely overwhelm them. Still interesting to think about though.
+        </p>
           
         
            <section id="downloads">
