--- a/SIP/july.html
+++ b/SIP/july.html
@@ -62,6 +62,11 @@
 <h3>July 13th, 2020. Day 118.</h3>  
         <p>This morning I cut my sister's hair at our home. Then she walked her dog and I played chess and watched youtube videos. I'm going to go to my girlfriend's at 3pm. I should think of some kind of plan for dinner. I was considering getting her favorite sushi and bringing it with me, but the problem with that is that I will get there at 3pm and she doesn't get off work until 5pm, so the sushi would be kind of not optimal. So maybe I get there at 3pm then go out and get something at around 4:45 or something like that. I played some more mahjong and actually won a couple games but still ended up losing overall.
         </p>
+        <p>I went to my girlfriend's place and we baked ziti and garlic bread together for dinner then watched a couple episodes of brooklyn 99. Then went for a walk, it was very nice, we talked about important stuff.
+        </p>
+<h3>July 14th, 2020. Day 119.<h3>
+        <p>I worked on C programming today. If you want to see it you can let me know and I will show you my private github repo with the programs I've written. It is private because the programs are very simple and aren't really worth showing people.
+  </p>
         
            <section id="downloads">
           
