--- a/SIP/july.html
+++ b/SIP/july.html
@@ -65,9 +65,11 @@
         <p>I went to my girlfriend's place and we baked ziti and garlic bread together for dinner then watched a couple episodes of brooklyn 99. Then went for a walk, it was very nice, we talked about important stuff.
         </p>
 <h3>July 14th, 2020. Day 119.<h3>
-        <p>I worked on C programming today. If you want to see it you can let me know and I will show you my private github repo with the programs I've written. It is private because the programs are very simple and aren't really worth showing people.
+        <p>I worked on C programming today. If you want to see it you can let me know and I will show you my private github repo with the programs I've written. It is private because the programs are very simple and aren't really worth showing people. I watched a bunch of 'drunk history' on comedy central with my girlfriend.
   </p>
-        
+<h3>July 15th, 2020. Day 120.<h3>
+        <p>I played some chess in the morning and went for a walk with my girlfriend. Then I went home and played mahjong with my sister and mom. Darwin's ashes are ready today but we are going to pick them up tomorrow.
+  </p>
            <section id="downloads">
           
         </section>
