--- a/SIP/july.html
+++ b/SIP/july.html
@@ -68,7 +68,7 @@
         <p>I worked on C programming today. If you want to see it you can let me know and I will show you my private github repo with the programs I've written. It is private because the programs are very simple and aren't really worth showing people. I watched a bunch of 'drunk history' on comedy central with my girlfriend.
   </p>
 <h3>July 15th, 2020. Day 120.<h3>
-        <p>I played some chess in the morning and went for a walk with my girlfriend. Then I went home and played mahjong with my sister and mom. Darwin's ashes are ready today but we are going to pick them up tomorrow.
+        <p>I played some chess in the morning and went for a walk with my girlfriend. Then I went home and played mahjong with my sister and mom. Darwin's ashes are ready today but we are going to pick them up tomorrow. The power went out at aroudn 7pm! Everything got so quiet and all the neighbors texted each other, everyone was in a frenzy. My mom even took a rushed shower thinking there would be no light very soon. Then the power came back on 18 minutes later. Everything is back to normal now, whew I was scared there.
   </p>
            <section id="downloads">
           
