--- a/SIP/july.html
+++ b/SIP/july.html
@@ -70,6 +70,10 @@
 <h3>July 15th, 2020. Day 120.<h3>
         <p>I played some chess in the morning and went for a walk with my girlfriend. Then I went home and played mahjong with my sister and mom. Darwin's ashes are ready today but we are going to pick them up tomorrow. The power went out at aroudn 7pm! Everything got so quiet and all the neighbors texted each other, everyone was in a frenzy. My mom even took a rushed shower thinking there would be no light very soon. Then the power came back on 18 minutes later. Everything is back to normal now, whew I was scared there.
   </p>
+<h3>July 16th, 2020. Day 121.<h3>
+        <p>Today my mom picked up Darwin's ashes. He is in a little wood box with room for a photo on the front so we are gonna pick a photo out. I also got a email from one of my school instructors for fall. Classes don't start until November but he wanted to email the students now and make sure we were aware that all classes will be online and also that his class is not for beginners. I don't really think I am a beginner but maybe I am so I emailed him and told him the classes I am taking in the fall and asked if I should swap some or drop some.
+  </p>
+  
            <section id="downloads">
           
         </section>
